--- a/index.html
+++ b/index.html
@@ -1,66 +1,93 @@
 <!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Dont-panic-android by prasann</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Dont-panic-android</h1>
-        <p>Android version of Dont-panic app</p>
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-        <p class="view"><a href="https://github.com/prasann/dont-panic-android">View the Project on GitHub <small>prasann/dont-panic-android</small></a></p>
+  <title>Dont-panic-android</title>
+  <meta name="description" content="Android version of Dont-panic app">
 
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <ul>
-          <li><a href="https://github.com/prasann/dont-panic-android/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/prasann/dont-panic-android/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/prasann/dont-panic-android">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>Welcome to GitHub Pages.</h3>
+</head>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<body>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Dont-panic-android</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Android version of Dont-panic app</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/prasann/dont-panic-android/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/prasann/dont-panic-android/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/prasann/dont-panic-android" class="code">View Dont-panic-android on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p><strong>Android Version of <a href="http://dont-panic.herokuapp.com">Dont-Panic</a></strong></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>HomeScreen:</h2>
 
-<h3>Designer Templates</h3>
+<hr><p>While installing, the Android app make a request to the web service component of web app an synchronize the content. Home screen has tiles to chose between different categories.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-25-08.png" alt="homescreen"></p>
 
-<h3>Rather Drive Stick?</h3>
+<p>Home Screen has:</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>Sync button: In the top right is provided to manually sync the content with the web app, whenever user feels like syncing it. </li>
+<li>City Indicator: Indicates the currently chosen city.</li>
+<li>Category tiles: Lists various available category.</li>
+</ul><h2>City Choser Screen:</h2>
 
-<h3>Authors and Contributors</h3>
+<hr><p>Select the city for which you are traveling to.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-25-23.png" alt="CityChoser"></p>
 
-<h3>Support or Contact</h3>
+<h2>Categories Screen:</h2>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/prasann">prasann</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+<hr><ul>
+<li>Detail out the entries in each category.</li>
+<li>All the phone numbers are tap to call.</li>
+<li>All emails are tap to mail.</li>
+<li>Places and offices have map assistance if provided by the admin in the web app.</li>
+</ul><p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-26-09.png" alt="Malls"></p>
+
+<p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-25-50.png" alt="AccomodationScreen"></p>
+
+<p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-25-18.png" alt="Admins"></p>
+        </article>
+      </div>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/prasann" class="avatar"><img src="https://secure.gravatar.com/avatar/2639d859b86a83559ed2fcbd12163267?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/prasann">prasann</a> maintains <a href="https://github.com/prasann/dont-panic-android">Dont-panic-android</a></p>
+
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/prasann/dont-panic-android/tarball/master" class="tar">tar</a><a href="https://github.com/prasann/dont-panic-android/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
