Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <article class="markdown-body">
           <p><strong>Android Version of <a href="http://dont-panic.herokuapp.com">Dont-Panic</a></strong></p>
 
-<h2>HomeScreen:</h2>
+<hr><h2>HomeScreen:</h2>
 
-<hr><p>While installing, the Android app make a request to the web service component of web app an synchronize the content. Home screen has tiles to chose between different categories.</p>
+<p>While installing, the Android app make a request to the web service component of web app an synchronize the content. Home screen has tiles to chose between different categories.</p>
 
 <p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-25-08.png" alt="homescreen"></p>
 
@@ -50,15 +50,15 @@
 <li>Sync button: In the top right is provided to manually sync the content with the web app, whenever user feels like syncing it. </li>
 <li>City Indicator: Indicates the currently chosen city.</li>
 <li>Category tiles: Lists various available category.</li>
-</ul><h2>City Choser Screen:</h2>
+</ul><hr><h2>City Chooser Screen:</h2>
 
-<hr><p>Select the city for which you are traveling to.</p>
+<p>Select the city for which you are traveling to.</p>
 
 <p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-25-23.png" alt="CityChoser"></p>
 
-<h2>Categories Screen:</h2>
+<hr><h2>Categories Screen:</h2>
 
-<hr><ul>
+<ul>
 <li>Detail out the entries in each category.</li>
 <li>All the phone numbers are tap to call.</li>
 <li>All emails are tap to mail.</li>
@@ -66,8 +66,6 @@
 </ul><p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-26-09.png" alt="Malls"></p>
 
 <p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-25-50.png" alt="AccomodationScreen"></p>
-
-<p><img src="https://raw.github.com/prasann/dont-panic-android/master/artifacts/Screenshots/Screenshot_2012-09-26-09-25-18.png" alt="Admins"></p>
         </article>
       </div>
     </div>
